working on changeable grid size

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h3>
         by hannahbananacodes
     </h3>
+    <button onclick="boxFunction()">Change grid</button>
     <div id='container'></div>
     
 </body>
